V 0.4.2
- Code Optimization
- AWS SDK v1 -> v2 upgrade